Breaking change. Implements auth timing attack protection. AdminUserService.authenticate, SessionWs.authenticate and SessionWs.authenticateUser, injector.getInstance(TimedAuthenticationSecurer.class).initialize(). About TimedAuthenticationSecurer